start photo upload functionality

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dfiqcagsw",
+    "ApiKey": "533998898691966",
+    "ApiSecret": "33fwlgtRB0cJBbBrXOrP92irc1M"
+  }
 }
